--- a/static/style.css
+++ b/static/style.css
@@ -1,22 +1,22 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  font-family: 'Roboto', sans-serif;
 }
 
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
+main {
+  flex: 1 0 auto;
 }
 
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 20px;
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 2.5rem;
   margin: 30px 0;
   text-align: center;
 }
@@ -31,30 +31,27 @@ form {
 }
 
 form label {
-  display: block;
-  margin-bottom: 10px;
   font-weight: bold;
+  color: #9e9e9e;
 }
 
 form input[type="text"],
 form input[type="email"],
 form input[type="number"],
 form input[type="date"] {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
+  padding: 0 10px;
+  border: none;
   border-radius: 5px;
   margin-bottom: 20px;
-  font-size: 16px;
+  font-size: 1.2rem;
 }
 
 form select {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
+  padding: 0 10px;
+  border: none;
   border-radius: 5px;
   margin-bottom: 20px;
-  font-size: 16px;
+  font-size: 1.2rem;
 }
 
 form button {
@@ -63,7 +60,7 @@ form button {
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 1.2rem;
   cursor: pointer;
 }
 
@@ -92,8 +89,7 @@ table th {
 }
 
 table td a {
-  text-decoration: none;
-  color: #333;
+  color: #212121;
   font-weight: bold;
 }
 
@@ -106,6 +102,7 @@ table td a:hover {
   background-color: #f44336;
   color: #fff;
   margin-bottom: 20px;
+  border-radius: 5px;
 }
 
 .alert.success {
@@ -117,7 +114,7 @@ table td a:hover {
   color: #fff;
   font-weight: bold;
   float: right;
-  font-size: 22px;
+  font-size: 2rem;
   line-height: 20px;
   cursor: pointer;
   transition: 0.3s;
