--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,7 @@ body {
   min-height: 100vh;
   flex-direction: column;
   font-family: 'Roboto', sans-serif;
+  background-color: #f2f2f2;
 }
 
 main {
@@ -38,17 +39,11 @@ form label {
 form input[type="text"],
 form input[type="email"],
 form input[type="number"],
-form input[type="date"] {
-  padding: 0 10px;
-  border: none;
-  border-radius: 5px;
-  margin-bottom: 20px;
-  font-size: 1.2rem;
-}
-
+form input[type="date"],
 form select {
-  padding: 0 10px;
-  border: none;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
   border-radius: 5px;
   margin-bottom: 20px;
   font-size: 1.2rem;
